Completely altered the left nav, and fixed spacing

--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -25,39 +25,39 @@ body{
 }
 
 h1 {
-    font-weight: 900;
-    font-size: 3.5rem;
-    color: #211545;
-		margin: auto;
+	font-weight: 900;
+	font-size: 3.5rem;
+	color: #211545;
+	margin: auto;
 }
 
 h2 {
-    font-weight: 100;
-    font-size:2.5rem;
-    color: #211545;
-		margin: auto;
+	font-weight: 100;
+	font-size:2.5rem;
+	color: #211545;
+	margin: auto;
 }
 
 h3 {
-    font-weight: 100;
-    font-size: 1.25rem;
-    color: #211545;
+	font-weight: 100;
+	font-size: 1.25rem;
+	color: #211545;
 }
 
 h4 {
-    font-weight: 100;
-    font-size: 1rem;
-    color: #211545;
+	font-weight: 100;
+	font-size: 1rem;
+	color: #211545;
 }
 
 h5 {
-    font-weight: 100;
-    color: #211545;
+	font-weight: 100;
+	color: #211545;
 }
 
 h6 {
-    font-weight: 100;
-    color: #211545;
+	font-weight: 100;
+	color: #211545;
 }
 /* End general formatting */
 
@@ -90,37 +90,44 @@ h6 {
 /* End top nav */
 
 /* Left Nav */
-nav.navleft{
-  	float: left;
-	padding-right: 10px;
-}
-.navleft ul {
-  	list-style-type: none;
-  	padding: 0px;
-  	max-width: 200px;
-  	background-color: #f1f1f1;
-  	display: inline-block;
-}
-
-.navleft li a {
-	display: inline-block;
+.dropbtn {
+	background-color: #f1f1f1;
 	color: #000000;
-	padding: 10px 10px;
-	width: 100%;
-  	text-decoration: none;
+	padding: 14px;
 	font-size: 14px;
+	border: none;
+	cursor: pointer;
 }
 
-.navleft li a.active {
-  	background-color: #FFCC99;
-  	color: #000000;
- 	display: inline-block;
+.dropbtn:hover:not(.active) {
+	background-color: #000000;
+	color:white;
 }
 
-.navleft li a:hover:not(.active) {
-  	background-color: #555;
-  	color: white;
-  	display: inline-block;
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	overflow: auto;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+.dropdown a:hover {
+	background-color: #ddd;
+	text-decoration: underline;
+}
+
+.show {
+	display: block;
 }
 /* End Left Nav */
 
